fixed styling issue where you cant text for inputs in dark mode

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -38,11 +38,13 @@ button:active {
 }
 
 input[type=text] {
+  background-color: var(--app-secondary-background-color);
   border: none;
   padding: 10px;
   border-bottom: 3px solid var(--primary);
 }
 input[type=password] {
+  background-color: var(--app-secondary-background-color);
   border: none;
   padding: 10px;
   border-bottom: 3px solid var(--primary);
